2008-04-18  Dennis Roberts  <dennis.roberts@sunquestinfo.com>

	* aix5ppc-core.c: Define macros for the default architecture and
	machine for matching core files.
	(xcoff64_core_p): Set the architecture and machine to the default
	values defined in the macros mentioned above.
	* rs6000-core.c: Define macros to determine whether or not the
	core file header uses the core_dumpxx header format.
	(rs6000coff_core_p): Don't match core files that use the
	core_dumpxx header format.

2008-04-16  Pedro Alves  <pedro@codesourcery.com>

	* config.bfd (i[3-7]86-*-dicos*, x86_64-*-dicos*): Add.

2008-04-16  David S. Miller  <davem@davemloft.net>

	* reloc.c (BFD_RELOC_SPARC_GOTDATA_HIX22,
	BFD_RELOC_SPARC_GOTDATA_LOX10, BFD_RELOC_SPARC_GOTDATA_OP_HIX22,
	BFD_RELOC_SPARC_GOTDATA_OP_LOX10, BFD_RELOC_SPARC_GOTDATA_OP): New.
	* libbfd.h: Regnerate.
	* bfd-in2.h: Regenerate.
	* elfxx-sparc.c (_bfd_sparc_elf_howto_table): Add entries for
	GOTDATA relocations.
	(sparc_reloc_map): Likewise.
	(_bfd_sparc_elf_check_relocs): Handle R_SPARC_GOTDATA_* like
	R_SPARC_GOT*.
	(_bfd_sparc_elf_gc_sweep_hook): Likewise.
	(_bfd_sparc_elf_relocate_section): Transform R_SPARC_GOTDATA_HIX22,
	R_SPARC_GOTDATA_LOX10, R_SPARC_GOTDATA_OP_HIX22, and
	R_SPARC_GOTDATA_OP_LOX10 into the equivalent R_SPARC_GOT* reloc.
	Simply ignore R_SPARC_GOTDATA_OP relocations.

2008-04-14  Aurelien Jarno  <aurelien@aurel32.net>

	* configure.in: Link with the PIC version of libiberty on
	Linux/MIPS hosts.
	* configure: Regenerate.

2008-04-14  Edmar Wienskoski  <edmar@freescale.com>

	* archures.c: Add bfd_mach_ppc_e500mc.
	* bfd-in2.h: Regenerate.

2008-04-08  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (spu_elf_build_stubs): Correct error message.
	(mark_functions_via_relocs): Remove premature init of symtab_hdr.
	(collect_overlays): Commment typo fix.

2008-04-08  Kees Cook  <kees@canonical.com>

	* elflink.c (bfd_elf_size_dynamic_sections): Ignore GNU-stack note
	in EXEC_P bfds.
